--- a/views/HomePage.hbs
+++ b/views/HomePage.hbs
@@ -61,7 +61,7 @@
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
                 <a href="" class="text-decoration-none">
-                    <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
+                    <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">FPT</span>BookShop</h1>
                 </a>
             </div>
             <div class="col-lg-6 col-6 text-left">
@@ -102,22 +102,22 @@
                 <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
+                            <a href="#" class="nav-link" data-toggle="dropdown">BESTSELLERS <i class="fa fa-angle-down float-right mt-1"></i></a>
                             <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
                                 <a href="" class="dropdown-item">Men's Dresses</a>
                                 <a href="" class="dropdown-item">Women's Dresses</a>
                                 <a href="" class="dropdown-item">Baby's Dresses</a>
                             </div>
                         </div>
-                        <a href="" class="nav-item nav-link">Shirts</a>
-                        <a href="" class="nav-item nav-link">Jeans</a>
-                        <a href="" class="nav-item nav-link">Swimwear</a>
-                        <a href="" class="nav-item nav-link">Sleepwear</a>
-                        <a href="" class="nav-item nav-link">Sportswear</a>
-                        <a href="" class="nav-item nav-link">Jumpsuits</a>
-                        <a href="" class="nav-item nav-link">Blazers</a>
-                        <a href="" class="nav-item nav-link">Jackets</a>
-                        <a href="" class="nav-item nav-link">Shoes</a>
+                        <a href="" class="nav-item nav-link">PICKS OF THE MONTH</a>
+                        <a href="" class="nav-item nav-link">CELEBRATING POETRY MONTH</a>
+                        <a href="" class="nav-item nav-link">Kids</a>
+                        <a href="" class="nav-item nav-link">IT<a>
+                        <a href="" class="nav-item nav-link">Curriculum</a>
+                        <a href="" class="nav-item nav-link">Arts and Literature</a>
+                        <a href="" class="nav-item nav-link">Science and technology – Economics</a>
+                        <a href="" class="nav-item nav-link">Legal politics</a>
+                        <a href="" class="nav-item nav-link">Novel</a>
                     </div>
                 </nav>
             </div>
