--- a/public/admin.css
+++ b/public/admin.css
@@ -13,6 +13,7 @@ body {
     background-color: #ffffff;
     float: left;
     overflow: hidden;
+    transition: 0.1s;
   }
   .logo {
     height: 80px;
