--- a/views/HomePage.hbs
+++ b/views/HomePage.hbs
@@ -241,7 +241,7 @@
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/1.jpg" alt="">
-                    </a>
+                    </a>    
                     <h5 class="font-weight-semi-bold m-0">BESTSELLERS</h5>
                 </div>
             </div>
@@ -381,7 +381,7 @@
             <h2 class="section-title px-5"><span class="px-2">Just Arrived</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
-            {{#each searchBook}}
+            {{#each books}}
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
