--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -118,21 +118,9 @@
                             <td class="align-middle"><img src="{{pic}}" alt="" style="width: 50px;">{{name}}</td>
                             <td class="align-middle">{{price}}</td>
                             <td class="align-middle">
-                                <div class="input-group quantity mx-auto" style="width: 100px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-minus" >
-                                        <i class="fa fa-minus"></i>
-                                        </button>
-                                    </div>
-                                    <input type="text" class="form-control form-control-sm bg-secondary text-center" value="1">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-plus">
-                                            <i class="fa fa-plus"></i>
-                                        </button>
-                                    </div>
-                                </div>
+                             {{qty}}
                             </td>
-                            <td class="align-middle">$150</td>
+                            <td class="align-middle">{{money}}</td>
                             <td class="align-middle">
                             <a href="/shoppingCart/delete?id={{_id}}"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></a>
                             </td>
@@ -157,11 +145,11 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-between mb-3 pt-1">
                             <h6 class="font-weight-medium">Subtotal</h6>
-                            <h6 class="font-weight-medium">$150</h6>
+                            <h6 class="font-weight-medium">{{order.totalPrice}}</h6>
                         </div>
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-medium">Shipping</h6>
-                            <h6 class="font-weight-medium">$10</h6>
+                            <h6 class="font-weight-medium">{{order.totalPrice}}</h6>
                         </div>
                     </div>
                     <div class="card-footer border-secondary bg-transparent">
