--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -318,9 +318,10 @@
                     <input type="hidden" name="bookID" value="{{details._id}}">
                     <button  type="submit" class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
                     <a href="/shoppingCart/viewCart"><button type="button" class="btn">View Cart</button></a>
-                    <a href="/feedback?name={{detail.name}}"><button type="button" class="btn">Feed back</button></a>
+                    <a href="/feedback?name={{details.name}}"><button type="button" class="btn">Feed back</button></a>
                     </form>
                 </div>
+            
                 <div class="d-flex pt-2">
                     <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
                     <div class="d-inline-flex">
@@ -345,7 +346,7 @@
                 <div class="nav nav-tabs justify-content-center border-secondary mb-4">
                     <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Description</a>
                     <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-2">Information</a>
-                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-3">Reviews (0)</a>
+                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-3">Feedbacks</a>
                 </div>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
@@ -392,13 +393,22 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="tab-pane-3">
+                          {{!-- {{#each list}}
+              <tr>
+                <td>{{username}}</td>
+                <td>{{name}}</td>
+                <td>{{feedback}}</td>
+
+              </tr>
+              {{/each}} --}}
                         <div class="row">
                             <div class="col-md-6">
-                                <h4 class="mb-4">1 review for "Colorful Stylish Shirt"</h4>
+                                {{!-- <h4 class="mb-4">1 review for "Colorful Stylish Shirt"</h4> --}}
+                                  {{#each list}}
                                 <div class="media mb-4">
                                     <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
                                     <div class="media-body">
-                                        <h6>John Doe<small> - <i>01 Jan 2045</i></small></h6>
+                                        <h6>{{username}}<small> - <i>01 Jan 2045</i></small></h6>
                                         <div class="text-primary mb-2">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -406,9 +416,10 @@
                                             <i class="fas fa-star-half-alt"></i>
                                             <i class="far fa-star"></i>
                                         </div>
-                                        <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum.</p>
+                                        <p>{{feedback}}</p>
                                     </div>
                                 </div>
+                                {{/each}}
                             </div>
                             <div class="col-md-6">
                                 <h4 class="mb-4">Leave a review</h4>
@@ -423,19 +434,17 @@
                                         <i class="far fa-star"></i>
                                     </div>
                                 </div>
-                                <form>
+                 
+                                <form method="POST" action="/feedback">
                                     <div class="form-group">
-                                        <label for="message">Your Review *</label>
-                                        <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
+                                         <label for="message">Your Review *</label>
+                                        <textarea id="message" type="text" name="feedback" cols="30" rows="5" class="form-control"></textarea>
                                     </div>
                                     <div class="form-group">
-                                        <label for="name">Your Name *</label>
-                                        <input type="text" class="form-control" id="name">
+                                        {{!-- <label for="name">Your Name *</label> --}}
+                                        <input type="text" name="name" value="{{details.name}}" hidden  class="form-control" id="name">
                                     </div>
-                                    <div class="form-group">
-                                        <label for="email">Your Email *</label>
-                                        <input type="email" class="form-control" id="email">
-                                    </div>
+                                 
                                     <div class="form-group mb-0">
                                         <input type="submit" value="Leave Your Review" class="btn btn-primary px-3">
                                     </div>
