--- a/views/CheckOut.hbs
+++ b/views/CheckOut.hbs
@@ -293,32 +293,19 @@
                     </div>
                     <div class="card-body">
                         <h5 class="font-weight-medium mb-3">Products</h5>
+                        {{#each books.books}}
                         <div class="d-flex justify-content-between">
-                            <p>Colorful Stylish Shirt 1</p>
-                            <p>$150</p>
+                            <p>{{name}}</p>
+                            <p>{{qty}}</p>
+                            <p>{{price}}</p>
                         </div>
-                        <div class="d-flex justify-content-between">
-                            <p>Colorful Stylish Shirt 2</p>
-                            <p>$150</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p>Colorful Stylish Shirt 3</p>
-                            <p>$150</p>
-                        </div>
-                        <hr class="mt-0">
-                        <div class="d-flex justify-content-between mb-3 pt-1">
-                            <h6 class="font-weight-medium">Subtotal</h6>
-                            <h6 class="font-weight-medium">$150</h6>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-medium">Shipping</h6>
-                            <h6 class="font-weight-medium">$10</h6>
-                        </div>
+                        {{/each}}
+                    
                     </div>
                     <div class="card-footer border-secondary bg-transparent">
                         <div class="d-flex justify-content-between mt-2">
                             <h5 class="font-weight-bold">Total</h5>
-                            <h5 class="font-weight-bold">$160</h5>
+                            <h5 class="font-weight-bold">{{books.totalPrice}}</h5>
                         </div>
                     </div>
                 </div>
@@ -346,8 +333,15 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="card-footer border-secondary bg-transparent">
-                        <button class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3">Place Order</button>
+                        <form action="/shoppingCart/pay" method="post">
+                            <input type="hidden" name="userOrder" id="userOrder" value="{{books._id}}">
+                            <input type="hidden" name="totalPrice" id="totalPrice" value="{{Total}}">
+                            <button class="btn btn-lg btn-block btn-primary font-weight-bold my-3 py-3" onclick="return confirm('Are you sure to pay this cart?')">Place Order</button>
+                            <b>Pay</b> VND <span id="payAmount">{{Total}}</span>
+                        </form>
+                        
                     </div>
                 </div>
             </div>
