--- a/views/Admin_Product.hbs
+++ b/views/Admin_Product.hbs
@@ -49,18 +49,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><img src="" alt="">Orders</a>
+                        <a href="/admin" class="nav-link"><img src="" alt="">Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><img src="" alt="">Customers</a>
+                        <a href="/admin/manageCustomer" class="nav-link"><img src="" alt="">Customers</a>
                     </li>
                     <li class="nav-item">
                         <a href="/admin/addbook" class="nav-link"><img src="" alt="">Add Book</a>
                     </li>
-                    <!-- <li class="nav-item">
-                                    <a href="#" class="nav-link"><img src="./images/cog.svg"
-                                                alt="dashboard">Settings</a>
-                              </li> -->
                 </ul>
             </div>
         </div>
@@ -190,36 +186,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="dash-card">
-                            <div class="d-flex justify-content-between align-items-center ">
-                                <h4>Users</h4>
-                                <img src="./images/more.svg" alt="more" />
-                            </div>
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Users</th>
-                                            <th>Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Thai Son</td>
-                                            <td>active</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Thanh Phong</td>
-                                            <td>active</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Thanh Binh</td>
-                                            <td>active</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
 
