--- a/views/Pushase.hbs
+++ b/views/Pushase.hbs
@@ -37,7 +37,7 @@
                             <tr>
                                 <th scope="col" width="50">#</th>
                                 <th scope="col">Product ID</th>
-                                <th scope="col">Quantity</th>
+                                <th scope="col">Book's information</th>
                                 <th scope="col">Time</th>
                                 <th scope="col">Price</th>
                                 <th scope="col">Status</th>
@@ -62,8 +62,6 @@
                                             Cancel</button> 
                                     </form>
                                 </td>
-                                    {{!-- {{Status}} <a href="/shoppingCart/UpdateSt?id={{_id}}"> <button type="sumbit">
-                                            Cancel</button> </a> --}}
                             </tr>
                             {{/each}}
                         </tbody>
